# manage_subscriptions

./: README.rst  pyproject.toml
socrse_subscription/: __init__.py
